<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.moviedetails.MovieDetailsFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintMovieDetail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cvMovieDetailPoster"
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:backgroundTint="@color/transparent"
                app:cardElevation="0dp"
                app:cardPreventCornerOverlap="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/ivMovieDetailPoster"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    app:shapeAppearance="?attr/shapeAppearanceMediumComponent"
                    app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.Card.Media"
                    tools:srcCompat="@drawable/ic_launcher_background" />

            </com.google.android.material.card.MaterialCardView>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="265dp" />

            <ImageButton
                android:id="@+id/ibBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/xlarge"
                android:layout_marginTop="@dimen/xlarge"
                android:backgroundTint="@color/transparent"
                android:paddingHorizontal="0dp"
                android:src="@drawable/ic_baseline_arrow_back_ios_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cvUserRatings"
                style="@style/CustomCardViewStyle"
                android:layout_width="130dp"
                android:layout_height="70dp"
                app:cardElevation="@dimen/medium"
                app:layout_constraintBottom_toTopOf="@id/guideline"
                app:layout_constraintEnd_toEndOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <ImageView
                        android:id="@+id/ivMovieDetailStar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_baseline_grade_24"
                        app:layout_constraintBottom_toBottomOf="@id/tvComplement"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/tvMovieDetailRating" />

                    <TextView
                        android:id="@+id/tvMovieDetailRating"
                        style="@style/BodyTextBold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/xsmall"
                        android:layout_marginBottom="@dimen/xxsmall"
                        android:textColor="@color/dark_blue"
                        app:layout_constraintStart_toEndOf="@id/ivMovieDetailStar"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="81%" />

                    <TextView
                        android:id="@+id/tvComplement"
                        style="@style/SmallText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/avaliacao"
                        android:textColor="@color/light_blue1"
                        app:layout_constraintStart_toStartOf="@id/tvMovieDetailRating"
                        app:layout_constraintTop_toBottomOf="@id/tvMovieDetailRating" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/tvMovieDetailTitle"
                style="@style/H1Text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/xlarge"
                android:layout_marginTop="@dimen/xsmall"
                android:layout_marginBottom="@dimen/small"
                android:ellipsize="end"
                android:textColor="@color/dark_blue"
                app:layout_constraintBottom_toTopOf="@id/tvMovieDetailYear"
                app:layout_constraintEnd_toStartOf="@id/ibMovieDetailFavorite"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/guideline"
                tools:text="Ford vs Ferrari" />

            <ImageButton
                android:id="@+id/ibMovieDetailFavorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/xsmall"
                android:layout_marginEnd="@dimen/xlarge"
                android:backgroundTint="@color/transparent"
                android:padding="0dp"
                app:layout_constraintBottom_toBottomOf="@id/tvMovieDetailYear"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tvMovieDetailTitle"
                tools:src="@drawable/ic_baseline_favorite_border_24" />

            <TextView
                android:id="@+id/tvMovieDetailYear"
                style="@style/BodyText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/light_blue1"
                app:layout_constraintBottom_toTopOf="@id/rvMovieDetailGenres"
                app:layout_constraintEnd_toStartOf="@id/tvMovieDetailPg"
                app:layout_constraintStart_toStartOf="@id/tvMovieDetailTitle"
                app:layout_constraintTop_toBottomOf="@id/tvMovieDetailTitle"
                tools:text="2019" />

            <TextView
                android:id="@+id/tvMovieDetailPg"
                style="@style/BodyText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/medium"
                android:textColor="@color/light_blue1"
                app:layout_constraintBaseline_toBaselineOf="@id/tvMovieDetailYear"
                app:layout_constraintBottom_toBottomOf="@id/tvMovieDetailYear"
                app:layout_constraintEnd_toStartOf="@id/tvMovieDetailRuntime"
                app:layout_constraintStart_toEndOf="@id/tvMovieDetailYear"
                app:layout_constraintTop_toBottomOf="@id/tvMovieDetailTitle"
                tools:text="PG-13" />

            <TextView
                android:id="@+id/tvMovieDetailRuntime"
                style="@style/BodyText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/medium"
                android:textColor="@color/light_blue1"
                app:layout_constraintBaseline_toBaselineOf="@id/tvMovieDetailYear"
                app:layout_constraintBottom_toBottomOf="@id/tvMovieDetailYear"
                app:layout_constraintStart_toEndOf="@id/tvMovieDetailPg"
                app:layout_constraintTop_toBottomOf="@id/tvMovieDetailTitle"
                tools:text="2h 32min" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvMovieDetailGenres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small"
                android:clipToPadding="false"
                android:orientation="horizontal"
                android:paddingHorizontal="@dimen/small"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvMovieDetailYear"
                tools:listitem="@layout/item_genre_detail" />

            <TextView
                android:id="@+id/tvSyposisTitle"
                style="@style/H2Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/xlarge"
                android:layout_marginTop="@dimen/small"
                android:text="@string/sinopse"
                android:textColor="@color/dark_blue"
                app:layout_constraintBottom_toTopOf="@id/tvMovieDetailSynopsis"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rvMovieDetailGenres" />

            <TextView
                android:id="@+id/tvMovieDetailSynopsis"
                style="@style/BodyText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/xlarge"
                android:layout_marginTop="@dimen/xsmall"
                android:textColor="@color/blue"
                app:layout_constraintBottom_toTopOf="@id/tvCastTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvSyposisTitle"
                tools:text="@tools:sample/lorem/random" />

            <TextView
                android:id="@+id/tvCastTitle"
                style="@style/H2Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/xlarge"
                android:layout_marginTop="@dimen/small"
                android:layout_marginBottom="@dimen/xsmall"
                android:text="@string/elenco"
                android:textColor="@color/dark_blue"
                app:layout_constraintBottom_toTopOf="@id/rvCastMembers"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvMovieDetailSynopsis" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvCastMembers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/small"
                android:clipToPadding="false"
                android:orientation="horizontal"
                android:paddingHorizontal="@dimen/small"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvCastTitle"
                tools:listitem="@layout/item_cast_member" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintMovieDetailError"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible">

            <ImageButton
                android:id="@+id/ibErrorClose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/xlarge"
                android:layout_marginEnd="@dimen/xlarge"
                android:backgroundTint="@color/transparent"
                android:src="@drawable/ic_baseline_close_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/ivError"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/imgerror"
                app:layout_constraintBottom_toTopOf="@id/tvErrorTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/tvErrorTitle"
                style="@style/H1Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/xlarge"
                android:text="@string/o_sistema_falhou"
                android:textColor="@color/gray3"
                app:layout_constraintBottom_toTopOf="@id/tvErrorDescription"
                app:layout_constraintEnd_toEndOf="@id/ivError"
                app:layout_constraintStart_toStartOf="@id/ivError"
                app:layout_constraintTop_toBottomOf="@id/ivError" />

            <TextView
                android:id="@+id/tvErrorDescription"
                style="@style/BodyText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small"
                android:gravity="center"
                android:paddingHorizontal="@dimen/xlarge"
                android:text="@string/error_description"
                android:textColor="@color/gray3"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvErrorTitle" />

            <Button
                android:id="@+id/btnErrorTryAgain"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/xxlarge"
                android:backgroundTint="@color/transparent"
                android:elevation="0dp"
                android:fontFamily="@font/lato_bold"
                android:text="@string/tentar_novamente"
                android:textAllCaps="false"
                android:textColor="@color/green"
                android:textSize="@dimen/h1_text_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/greenDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/tab_indicator"
                app:layout_constraintEnd_toEndOf="@id/btnErrorTryAgain"
                app:layout_constraintStart_toStartOf="@id/btnErrorTryAgain"
                app:layout_constraintTop_toBottomOf="@id/btnErrorTryAgain" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>

